--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@google/generative-ai": "^0.14.1",
+    "@heroicons/react": "^2.1.5",
+    "@mui/joy": "^5.0.0-beta.48",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -30,8 +34,8 @@
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-web-share": "^2.0.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
