--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@google/generative-ai": "^0.14.1",
@@ -27,17 +30,25 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-form-builder/designer": "^3.0.2",
+    "bootstrap-slider": "^11.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.4",
+    "framer-motion": "^12.4.1",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.402.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-form-builder2": "^0.18.4",
     "react-web-share": "^2.0.2",
     "sonner": "^1.5.0",
+    "survey-core": "^1.12.23",
+    "survey-creator-react": "^1.12.23",
+    "survey-react-ui": "^1.12.23",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5"
